:art: Style tweaks

--- a/src/theme.sass
+++ b/src/theme.sass
@@ -40,6 +40,9 @@ body
     +sticky-sidebar
     flex: 0 0 220px
     margin-right: 1em
+    
+    li > .menu-label
+      margin-top: 1em
   
   .menu-list li ul
     margin-left: 0.25em
