:art: Fix mobile menu

--- a/src/theme.sass
+++ b/src/theme.sass
@@ -69,8 +69,10 @@ body
         &:hover
           background-color: $background
 
-  .modal .box
-    margin: 0 1em
+  .modal
+    justify-content: flex-start
+    .box
+      margin: 4em 1em
 
   .footer
     padding: 3rem 1rem 2rem
