--- a/src/theme.sass
+++ b/src/theme.sass
@@ -4,7 +4,20 @@ $title-weight: 900
 $menu-item-active-background-color: #1EA2AD
 $menu-nested-list-padding-left: 0.25em
 
-@import "bulma/bulma.sass"
+@import "bulma/sass/utilities/_all.sass"
+@import "bulma/sass/base/_all.sass"
+
+@import "bulma/sass/layout/footer.sass"
+@import "bulma/sass/layout/section.sass"
+
+@import "bulma/sass/elements/box.sass"
+@import "bulma/sass/elements/container.sass"
+@import "bulma/sass/elements/content.sass"
+@import "bulma/sass/elements/title.sass"
+
+@import "bulma/sass/components/menu.sass"
+@import "bulma/sass/components/modal.sass"
+@import "bulma/sass/components/navbar.sass"
 
 // Seems buggy?
 // html
