:art: Tweak styles

--- a/src/theme.sass
+++ b/src/theme.sass
@@ -53,18 +53,21 @@ body
   
   .sitetree
     +sticky-sidebar
-    flex: 0 0 220px
+    flex: 0 0 250px
     margin-right: 1em
     
     li > .menu-label
       margin-top: 1em
+  
+  .menu-list a
+    padding-left: 0
   
   .menu-list li ul
     margin-left: 0.25em
   
   .pagetree
     +sticky-sidebar
-    flex: 0 0 220px
+    flex: 0 0 250px
     margin-left: 0.5em
     padding-left: 0.5em
     border-left: 2px dashed $border
