--- a/src/theme.sass
+++ b/src/theme.sass
@@ -101,3 +101,9 @@ body
     a
       color: $grey-dark
       text-decoration: underline $grey-lighter
+  
+  .overflow-wrapper
+    max-width: 100%
+    overflow-x: auto
+    margin-bottom: 1em
+    
