:art: Add smooth scroll

--- a/src/theme.sass
+++ b/src/theme.sass
@@ -32,6 +32,9 @@ $menu-nested-list-padding-left: 0.25em
     +mobile
       display: none
 
+html
+  scroll-behaviour: smooth
+
 body
   display: flex
   flex-direction: column
